First stab at an installer package for the Mac - GHC as a Mac framework - I tried to make a package where the user could choose whether to install   in /Library/Frameworks or ~/Library/Frameworks (to allow installation for   non-admins).  However, that doesn't work well without including the whole   distribution twice as the decision as to whether the admin password needs   to be entered is made at packaging time (not at install time).

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -507,10 +507,9 @@ endif
 FPTOOLS_TOP_ABS		= @hardtop@
 
 BIN_DIST_NAME=ghc-$(ProjectVersion)
-BIN_DIST_TOPDIR_REL=$(FPTOOLS_TOP)
 BIN_DIST_TOPDIR_ABS=$(FPTOOLS_TOP_ABS)
 BIN_DIST_DIR=$(BIN_DIST_TOPDIR_ABS)/$(BIN_DIST_NAME)
-BIN_DIST_TARBALL=$(BIN_DIST_TOPDIR_REL)/$(BIN_DIST_NAME)-$(TARGETPLATFORM).tar.bz2
+BIN_DIST_TARBALL=$(FPTOOLS_TOP_ABS)/$(BIN_DIST_NAME)-$(TARGETPLATFORM).tar.bz2
 
 # Definition of installation directories, we don't use half of these, but since
 # the configure script has them on offer while passing through, we might as well
