Mac installer: added support for full docs

--- a/distrib/MacOS/Makefile
+++ b/distrib/MacOS/Makefile
@@ -57,7 +57,7 @@ framework-pkg:
 	-$(RM) -rf $(DSTROOT)
 	mkdir -p $(TOOLS_SYSTEM)
 	cp installer-scripts/Uninstaller $(TOOLS_SYSTEM)
-	xcodebuild -target GHC-systemwide clean install\
+	xcodebuild -target GHC-systemwide clean build install\
 		   CURRENT_PROJECT_VERSION=$(CURRENT_PROJECT_VERSION)\
 	    	   SHORT_VERSION_STRING=$(SHORT_VERSION_STRING)\
 	 	   FRAMEWORK_VERSION=$(FRAMEWORK_VERSION)\
