Add typesigs to Config.hs

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -221,54 +221,97 @@ $(CONFIG_HS) : $(FPTOOLS_TOP)/mk/config.mk
 	@echo "Creating $(CONFIG_HS) ... "
 	@echo "{-# OPTIONS -w #-}" >>$(CONFIG_HS)
 	@echo "module Config where" >>$(CONFIG_HS)
+	@echo "cProjectName          :: String" >> $(CONFIG_HS)
 	@echo "cProjectName          = \"$(ProjectName)\"" >> $(CONFIG_HS)
+	@echo "cProjectVersion       :: String" >> $(CONFIG_HS)
 	@echo "cProjectVersion       = \"$(ProjectVersion)\"" >> $(CONFIG_HS)
+	@echo "cProjectVersionInt    :: String" >> $(CONFIG_HS)
 	@echo "cProjectVersionInt    = \"$(ProjectVersionInt)\"" >> $(CONFIG_HS)
+	@echo "cProjectPatchLevel    :: String" >> $(CONFIG_HS)
 	@echo "cProjectPatchLevel    = \"$(ProjectPatchLevel)\"" >> $(CONFIG_HS)
+	@echo "cBooterVersion        :: String" >> $(CONFIG_HS)
 	@echo "cBooterVersion        = \"$(GhcVersion)\"" >> $(CONFIG_HS)
+	@echo "cStage                :: String" >> $(CONFIG_HS)
 	@echo "cStage                = STAGE" >> $(CONFIG_HS)
+	@echo "cHscIfaceFileVersion  :: String" >> $(CONFIG_HS)
 	@echo "cHscIfaceFileVersion  = \"$(HscIfaceFileVersion)\"" >> $(CONFIG_HS)
+	@echo "cSplitObjs            :: String" >> $(CONFIG_HS)
 	@echo "cSplitObjs            = \"$(SplitObjs)\"" >> $(CONFIG_HS)
+	@echo "cGhcWithInterpreter   :: String" >> $(CONFIG_HS)
 	@echo "cGhcWithInterpreter   = \"$(GhcWithInterpreter)\"" >> $(CONFIG_HS)
+	@echo "cGhcWithNativeCodeGen :: String" >> $(CONFIG_HS)
 	@echo "cGhcWithNativeCodeGen = \"$(GhcWithNativeCodeGen)\"" >> $(CONFIG_HS)
+	@echo "cGhcWithSMP           :: String" >> $(CONFIG_HS)
 	@echo "cGhcWithSMP           = \"$(GhcWithSMP)\"" >> $(CONFIG_HS)
+	@echo "cGhcRTSWays           :: String" >> $(CONFIG_HS)
 	@echo "cGhcRTSWays           = \"$(GhcRTSWays)\"" >> $(CONFIG_HS)
+	@echo "cGhcUnregisterised    :: String" >> $(CONFIG_HS)
 	@echo "cGhcUnregisterised    = \"$(GhcUnregisterised)\"" >> $(CONFIG_HS)
+	@echo "cGhcEnableTablesNextToCode :: String" >> $(CONFIG_HS)
 	@echo "cGhcEnableTablesNextToCode = \"$(GhcEnableTablesNextToCode)\"" >> $(CONFIG_HS)
+	@echo "cLeadingUnderscore    :: String" >> $(CONFIG_HS)
 	@echo "cLeadingUnderscore    = \"$(LeadingUnderscore)\"" >> $(CONFIG_HS)
+	@echo "cRAWCPP_FLAGS         :: String" >> $(CONFIG_HS)
 	@echo "cRAWCPP_FLAGS         = \"$(RAWCPP_FLAGS)\"" >> $(CONFIG_HS)
+	@echo "cGCC                  :: String" >> $(CONFIG_HS)
 	@echo "cGCC                  = \"$(WhatGccIsCalled)\"" >> $(CONFIG_HS)
+	@echo "cMKDLL                :: String" >> $(CONFIG_HS)
 	@echo "cMKDLL                = \"$(BLD_DLL)\"" >> $(CONFIG_HS)
+	@echo "cLdIsGNULd            :: String" >> $(CONFIG_HS)
 	@echo "cLdIsGNULd            = \"$(LdIsGNULd)\"" >> $(CONFIG_HS)
+	@echo "cLD_X		     :: String" >> $(CONFIG_HS)
 	@echo "cLD_X		     = \"$(LD_X)\"" >> $(CONFIG_HS)
+	@echo "cPROJECT_DIR          :: String" >> $(CONFIG_HS)
 	@echo "cPROJECT_DIR          = \"$(PROJECT_DIR)\"" >> $(CONFIG_HS)
+	@echo "cGHC_DRIVER_DIR_REL   :: String" >> $(CONFIG_HS)
 	@echo "cGHC_DRIVER_DIR_REL   = \"$(GHC_DRIVER_DIR_REL)\"" >> $(CONFIG_HS)
+	@echo "cGHC_TOUCHY_PGM       :: String" >> $(CONFIG_HS)
 	@echo "cGHC_TOUCHY_PGM       = \"$(GHC_TOUCHY_PGM)\"" >> $(CONFIG_HS)
+	@echo "cGHC_TOUCHY_DIR_REL   :: String" >> $(CONFIG_HS)
 	@echo "cGHC_TOUCHY_DIR_REL   = \"$(GHC_TOUCHY_DIR_REL)\"" >> $(CONFIG_HS)
+	@echo "cGHC_UNLIT_PGM        :: String" >> $(CONFIG_HS)
 	@echo "cGHC_UNLIT_PGM        = \"$(GHC_UNLIT_PGM)\"" >> $(CONFIG_HS)
+	@echo "cGHC_UNLIT_DIR_REL    :: String" >> $(CONFIG_HS)
 	@echo "cGHC_UNLIT_DIR_REL    = \"$(GHC_UNLIT_DIR_REL)\"" >> $(CONFIG_HS)
+	@echo "cGHC_MANGLER_PGM      :: String" >> $(CONFIG_HS)
 	@echo "cGHC_MANGLER_PGM      = \"$(GHC_MANGLER_PGM)\"" >> $(CONFIG_HS)
+	@echo "cGHC_MANGLER_DIR_REL  :: String" >> $(CONFIG_HS)
 	@echo "cGHC_MANGLER_DIR_REL  = \"$(GHC_MANGLER_DIR_REL)\"" >> $(CONFIG_HS)
+	@echo "cGHC_SPLIT_PGM        :: String" >> $(CONFIG_HS)
 	@echo "cGHC_SPLIT_PGM        = \"$(GHC_SPLIT_PGM)\"" >> $(CONFIG_HS)
+	@echo "cGHC_SPLIT_DIR_REL    :: String" >> $(CONFIG_HS)
 	@echo "cGHC_SPLIT_DIR_REL    = \"$(GHC_SPLIT_DIR_REL)\"" >> $(CONFIG_HS)
+	@echo "cGHC_SYSMAN_PGM       :: String" >> $(CONFIG_HS)
 	@echo "cGHC_SYSMAN_PGM       = \"$(GHC_SYSMAN)\"" >> $(CONFIG_HS)
+	@echo "cGHC_SYSMAN_DIR_REL   :: String" >> $(CONFIG_HS)
 	@echo "cGHC_SYSMAN_DIR_REL   = \"$(GHC_SYSMAN_DIR)\"" >> $(CONFIG_HS)
+	@echo "cGHC_CP               :: String" >> $(CONFIG_HS)
 	@echo "cGHC_CP               = \"$(GHC_CP)\"" >> $(CONFIG_HS)
+	@echo "cGHC_PERL             :: String" >> $(CONFIG_HS)
 	@echo "cGHC_PERL             = \"$(GHC_PERL)\"" >> $(CONFIG_HS)
 ifeq ($(GhcWithIlx),YES)
+	@echo "cILX2IL               :: String" >> $(CONFIG_HS)
 	@echo "cILX2IL               = \"$(ILX2IL)\"" >> $(CONFIG_HS)
+	@echo "cILASM                :: String" >> $(CONFIG_HS)
 	@echo "cILASM                = \"$(ILASM)\"" >> $(CONFIG_HS)
 endif
+	@echo "cEnableWin32DLLs      :: String" >> $(CONFIG_HS)
 	@echo "cEnableWin32DLLs      = \"$(EnableWin32DLLs)\"" >> $(CONFIG_HS)
+	@echo "cCONTEXT_DIFF         :: String" >> $(CONFIG_HS)
 	@echo "cCONTEXT_DIFF         = \"$(CONTEXT_DIFF)\"" >> $(CONFIG_HS)
+	@echo "cUSER_WAY_NAMES       :: String" >> $(CONFIG_HS)
 	@echo "cUSER_WAY_NAMES       = \"$(USER_WAY_NAMES)\"" >> $(CONFIG_HS)
+	@echo "cUSER_WAY_OPTS        :: String" >> $(CONFIG_HS)
 	@echo "cUSER_WAY_OPTS        = \"$(USER_WAY_OPTS)\"" >> $(CONFIG_HS)
+	@echo "cDEFAULT_TMPDIR       :: String" >> $(CONFIG_HS)
 	@echo "cDEFAULT_TMPDIR       = \"$(DEFAULT_TMPDIR)\"" >> $(CONFIG_HS)
+	@echo "cRelocatableBuild     :: Bool"                 >> $(CONFIG_HS)
 ifeq "$(RelocatableBuild)" "YES"
 	@echo "cRelocatableBuild     = True"                  >> $(CONFIG_HS)
 else
 	@echo "cRelocatableBuild     = False"                 >> $(CONFIG_HS)
 endif
+	@echo "cLibFFI               :: Bool"                 >> $(CONFIG_HS)
 ifeq "$(UseLibFFI)" "YES"
 	@echo "cLibFFI               = True"                  >> $(CONFIG_HS)
 else
