--- a/utils/nofib-analyse/Makefile
+++ b/utils/nofib-analyse/Makefile
@@ -4,6 +4,10 @@ include $(TOP)/mk/boilerplate.mk
 SRC_HC_OPTS    += -fglasgow-exts -cpp -Wall
 HS_PROG		= nofib-analyse
 
+ifeq "$(ghc_ge_607)" "YES"
+SRC_HC_OPTS     += -package containers
+endif
+
 ifeq "$(ghc_ge_605)" "YES"
 SRC_HC_OPTS	+= -package regex-compat -package html
 endif
