All installed Haskell prgms have an inplace and an installed version - GHC installs a range of compiled Haskell programs in addition to the actual   compiler.  To ensure that they all run on the platform targeted by the build   (which may have different libraries installed than the build host), we need   to make sure that all compiled Haskell code going into an install is build   with the stage 1 compiler, not the bootstrap compiler.  Getting this right   is especially important on the Mac to enable builds that work on Mac OS X   versions that are older than the one performing the build. - For all installed utils implemented in Haskell (i.e., ghc-pkg, hasktags,   hsc2hs, runghc, hpc, and pwd) we compile two versions, an inplace version   and a version for installation.  The former is build by the bootstrap   compiler during the stage 1 build and the latter is build by the stage 1   compiler during the stage 2 build. - This is really very much as the setup for ghc itself, only that we don't use   separate stage1/ and stage2/ build directories.  Instead, we clean before   each build.  CAVEAT: This only works properly if invoked from the   toplevel Makefile. - Instead of UseStage1=YES (as used by the previous binary-dist-specific   recompilation), we now use the same $(stage) variables as used for the   compiler proper - to increase uniformity and to avoid extra conditionals for   the install target.

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -173,7 +173,7 @@ installPackage/installPackage: installPackage.hs $(BOOTSTRAP_STAMPS)
 	-$(RM) -rf installPackage
 	mkdir installPackage
 	$(CP) installPackage.hs installPackage/
-ifeq "$(UseStage1)" "YES"
+ifeq "$(stage)" "2"
 	cd installPackage && ../$(HC) -Wall -cpp \
 	                            --make installPackage -o installPackage \
 	                            $(BOOTSTRAP_INC_1_UP)
@@ -190,7 +190,7 @@ ifBuildable/ifBuildable: ifBuildable.hs
 	-$(RM) -rf ifBuildable
 	mkdir ifBuildable
 	$(CP) ifBuildable.hs ifBuildable/
-ifeq "$(UseStage1)" "YES"
+ifeq "$(stage)" "2"
 	cd ifBuildable && ../$(HC) -Wall --make ifBuildable -o ifBuildable
 else
 	cd ifBuildable && $(GHC) -Wall --make ifBuildable -o ifBuildable
