--- a/utils/pwd/Makefile
+++ b/utils/pwd/Makefile
@@ -1,7 +1,13 @@
 TOP=../..
 include $(TOP)/mk/boilerplate.mk
 
-HS_PROG=pwd
+# We have two version: the inplace version compiled by the bootstrap compiler
+#   and the install version compiled by the stage 1 compiler
+ifeq "$(stage)" "2"
+HS_PROG           = pwd
+else
+HS_PROG           = pwd-inplace
+endif
 
 binary-dist:
 	$(INSTALL_DIR)                      $(BIN_DIST_DIR)/utils/pwd
