--- a/libraries/Makefile.local
+++ b/libraries/Makefile.local
@@ -1,5 +1,6 @@
 # Local GHC-build-tree customization for Cabal makefiles.  We want to build
-# libraries using flags that the user has put in build.mk/validate.mk.
+# libraries using flags that the user has put in build.mk/validate.mk and
+# appropriate flags for Mac OS X deployment targets.
 
 # Careful here: including boilerplate.mk breaks things, because paths.mk and
 # opts.mk overrides some of the variable settings in the Cabal Makefile, so
@@ -15,5 +16,8 @@ AR  := $(SAVE_AR)
 LD  := $(SAVE_LD)
 
 # Now add flags from the GHC build system to the Cabal build:
-GHC_OPTS += $(SRC_HC_OPTS)
-GHC_OPTS += $(GhcLibHcOpts)
+GHC_CC_OPTS += $(addprefix -optc, $(MACOSX_DEPLOYMENT_CC_OPTS))
+GHC_OPTS    += $(SRC_HC_OPTS)
+GHC_OPTS    += $(GhcLibHcOpts)
+GHC_OPTS    += $(addprefix -optc, $(MACOSX_DEPLOYMENT_CC_OPTS))
+LIB_LD_OPTS += $(addprefix -optl, $(MACOSX_DEPLOYMENT_LD_OPTS))
