--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -187,8 +187,19 @@ XMLDocWays=
 
 # Mac OS X deployment target (to cross-compile for older OS versions)
 #
-MACOS_DEPLOYMENT_VERSION = @MACOS_DEPLOYMENT_VERSION@
-MACOS_DEPLOYMENT_SDK = @MACOS_DEPLOYMENT_SDK@
+MACOSX_DEPLOYMENT_VERSION = @MACOSX_DEPLOYMENT_VERSION@
+MACOSX_DEPLOYMENT_SDK = @MACOSX_DEPLOYMENT_SDK@
+
+ifneq "$(MACOSX_DEPLOYMENT_VERSION)" ""
+MACOSX_DEPLOYMENT_CC_OPTS = -mmacosx-version-min=$(MACOSX_DEPLOYMENT_VERSION) \
+			    -isysroot $(MACOSX_DEPLOYMENT_SDK)
+MACOSX_DEPLOYMENT_LD_OPTS = -mmacosx-version-min=$(MACOSX_DEPLOYMENT_VERSION) \
+			    -Wl,-syslibroot,$(MACOSX_DEPLOYMENT_SDK)
+# We don't extend SRC_CC_OPTS and friends here directly, as (a) they may get
+# overwritten in build.mk and (b) we must not use the deployment options in
+# stage 1 or we get a linker error if the bootstrap compiler is for a more 
+# recent OS version.
+endif
 
 ################################################################################
 #
