--- a/utils/prof/cgprof/Makefile
+++ b/utils/prof/cgprof/Makefile
@@ -1,6 +1,12 @@
 TOP=../../..
 include $(TOP)/mk/boilerplate.mk
 
+# Exclude for booting
+ifeq "$(stage)" "2"
+SRC_CC_OPTS += $(MACOSX_DEPLOYMENT_CC_OPTS)
+SRC_LD_OPTS += $(MACOSX_DEPLOYMENT_LD_OPTS)
+endif
+
 C_PROG = cgprof
 INSTALL_LIBEXECS=$(C_PROG)
 
