When concatenating variables in Makefile, strip spaces in case one is empty Otherwise "$(A) $(B)" will not be equal to "" even if A and B are empty. Trac #856.

--- a/rts/Makefile
+++ b/rts/Makefile
@@ -36,7 +36,7 @@ endif
 # -----------------------------------------------------------------------------
 # RTS ways
 
-WAYS=$(GhcLibWays) $(GhcRTSWays)
+WAYS=$(strip $(GhcLibWays) $(GhcRTSWays))
 
 ifneq "$(findstring debug, $(way))" ""
 GhcRtsHcOpts=
