Revive External Core parser
Huzzah, the External Core parser will now parse External Core generated by
the HEAD.

Most notably, I rewrote the parser in Parsec, but the old Happy version
remains in the repository.

I checked all the nofib benchmarks and most of the ghc-prim, base and integer
libraries to make sure they parsed; one known bug:
  - Strings like "\x0aE", in which a hex escape code is followed by a
    letter that could be a hex digit, aren't handled properly. I'm 
    investigating whether this is a bug in Parsec or expected behavior.

The checker and interpreter still don't work, but should compile.

Please mess around with the parser, report bugs, improve my code, etc.,
if you're so inclined.

--- a/utils/ext-core/Makefile
+++ b/utils/ext-core/Makefile
@@ -1,5 +1,5 @@
-all:	Check.hs Core.hs Driver.hs Env.hs Interp.hs Lex.hs ParseGlue.hs Parser.hs Prep.hs Prims.hs Printer.hs
+all:	Check.hs Core.hs Driver.hs Env.hs Interp.hs ParsecParser.hs ParseGlue.hs Prep.hs Prims.hs Printer.hs
 	ghc --make -fglasgow-exts -o Driver Driver.hs
 
-Parser.hs: Parser.y
-	happy -o Parser.hs Parser.y
+#Parser.hs: Parser.y
+#	happy -ad -ihappy.debug -o Parser.hs Parser.y
